# Job-Service

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: ApiClient.hpp  EmployerWindow.hpp  MainWindow.hpp  Models.hpp  WorkerWindow.hpp
client/src/: ApiClient.cpp  EmployerWindow.cpp  MainWindow.cpp  WorkerWindow.cpp  main.cpp
client/tests/: test_client.cpp
include/: JobService.hpp
include/api/: HttpServer.hpp  JsonParser.hpp  JsonSerializer.hpp
include/domain/: Employer.hpp  JobPosting.hpp  Reply.hpp  Worker.hpp
include/filter/: JobFilter.hpp
include/repository/: EmployerRepository.hpp  JobPostingRepository.hpp  ReplyRepository.hpp  WorkerRepository.hpp
include/service/: EmployerService.hpp  JobPostingService.hpp  ReplyService.hpp  WorkerService.hpp
include/utils/: LockGuard.hpp
src/: JobService.cpp  api_main.cpp  main.cpp
src/api/: HttpServer.cpp  JsonParser.cpp  JsonSerializer.cpp  requests.sh
src/domain/: Employer.cpp  JobPosting.cpp  Reply.cpp  Worker.cpp
src/filter/: JobFilter.cpp
src/repository/: EmployerRepository.cpp  JobPostingRepository.cpp  ReplyRepository.cpp  WorkerRepository.cpp
src/service/: EmployerService.cpp  JobPostingService.cpp  ReplyService.cpp  WorkerService.cpp
src/utils/: LockGuard.cpp
tests/: test_api.cpp  test_services.cpp
